--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gulp test build</title>
-</head>
-<body>
-  <h1>Hello, gulp!</h1>
-</body>
-</html>
+---
+layout: default
+title: Главная
+---
+
+<h1>Hello, gulp!</h1>
+<h2>This is second h</h2>
