Add data & main page

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,10 @@
 ---
 layout: default
-title: Главная
+title: avfomichev | Gulp build
 ---
 
-<h1>Hello, gulp!</h1>
-<h2>This is second h</h2>
+<h1>Hello, Gulp!</h1>
+<div class="author">
+  <span class="author__label">Author:</span>
+  <a class="author__link" href="https://github.com/fluxionbeats" target="_blank" rel="noopener noreferrer">fluxionbeats</a>
+</div>
